dashboard/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zalt-dashboard
  namespace: zalt
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:986906625644:certificate/d2db50f6-eef9-4f16-a92f-846539146411
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
spec:
  ingressClassName: alb
  rules:
    - host: app.zalt.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zalt-dashboard
                port:
                  number: 80
    - host: zalt.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zalt-dashboard
                port:
                  number: 80
